# spell_checker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  read.me  spell_checker.sln  spell_checker.vcxproj  spell_checker.vcxproj.filters
dict_test/: CMakeLists.txt  main.cpp
spell_checker/: CMakeLists.txt  dictionary_option.cpp  dictionary_option.h  dictionary_tree_node.cpp  dictionary_tree_node.h  latin_traits.cpp  latin_traits.h  spelling_dictionary.cpp  spelling_dictionary.h
testing/: CMakeLists.txt  dictionary_tree_node_testing.cpp  dictionary_tree_node_testing.h  find_word_testing.cpp  find_word_testing.h  main.cpp  main.h  spell_checker_testing.h  testing.cpp  testing.h
